# emnlp2026-CORA-diagnosis

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: DATA.md  EXPERIMENTS.md  MODELS.md  REPRODUCIBILITY.md
scripts/: check_local_inputs.py  embed_eq_renew_caches.py  generate_external_retriever_embeddings.py  run_external_core_diagnostic.py  run_paper_experiments.py  run_rankdrop_token_saliency.py  run_source_caption_anchor_diagnostic.py  run_source_caption_projection_analysis.py  run_tbmd_guided_view_intervention.py  setup_cora_test_split.py  summarize_experiments.py  token_saliency_helpers.py  verify_project.py
src/clap_eval/: config.py  dataset.py  utils.py
src/clap_eval/models/: __init__.py  base.py  laion.py  m2d.py  mga.py  msclap.py  multiclap.py
src/cora_repro/: __init__.py  paths.py  summarize.py  verify.py
