[project]
name = "cora-repro"
version = "0.1.0"
description = "Standalone reproducibility package for the CORA EQ/CLAP paper experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "braceexpand>=0.1.7",
    "datasets<4.0.0",
    "einops",
    "ftfy>=6.3.1",
    "huggingface_hub",
    "hydra-core>=1.3.2",
    "laion-clap>=1.1.7",
    "librosa",
    "loguru==0.6.0",
    "matplotlib",
    "msclap>=1.3.4",
    "nnAudio",
    "numpy",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.0",
    "pandas",
    "peft>=0.19.1",
    "pyyaml>=6.0",
    "qwen-omni-utils>=0.0.9",
    "resampy",
    "ruamel.yaml",
    "safetensors>=0.7.0",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sed-scores-eval>=0.0.4",
    "sentence_transformers",
    "sentencepiece>=0.2.1",
    "setuptools<70.0.0",
    "soundfile>=0.13.1",
    "timm",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchlibrosa",
    "tqdm",
    "transformers",
    "umap-learn",
    "wandb>=0.27.0",
    "webdataset>=1.0.2",
    "wget>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
cora-verify = "cora_repro.verify:main"
cora-summarize = "cora_repro.summarize:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-mac", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-mac", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-mac"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cora_repro", "src/clap_eval"]
